<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
	<LinearLayout android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingLeft="15dp"
	    android:paddingRight="15dp"
	    android:paddingTop="5dp"
	    android:orientation="vertical">
	    <TextView android:layout_width="fill_parent"
	        android:layout_height="wrap_content" 
	        android:textSize="18dp"
	        android:text="@string/infoGameNote1"/>
	    <RelativeLayout android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	       android:layout_marginTop="15dp" android:layout_marginBottom="15dp"
	       android:paddingLeft="20dp" android:paddingRight="20dp">
	       <View android:id="@+id/diagInfo_imgApple1"
	           android:layout_width="20dp" android:layout_height="20dp"
	           android:layout_alignParentLeft="true"
	           android:background="@drawable/napple1" />
	       <TextView android:id="@+id/diagInfo_txtApple1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_toRightOf="@id/diagInfo_imgApple1"
	            android:layout_alignTop="@id/diagInfo_imgApple1"
	            android:layout_marginLeft="10dp"
	            android:textSize="18dp"
	            android:text="@string/infoAppleNote1" />
	       <View android:id="@+id/diagInfo_imgApple2"
                android:layout_width="20dp" android:layout_height="20dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/diagInfo_txtApple1"
                android:layout_marginTop="5dp"
                android:background="@drawable/gapple1" />
           <TextView android:id="@+id/diagInfo_txtApple2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/diagInfo_imgApple2"
                android:layout_alignTop="@id/diagInfo_imgApple2"
                android:layout_marginLeft="10dp"
                android:textSize="18dp"
                android:text="@string/infoAppleNote2" />
            <View android:id="@+id/diagInfo_imgApple3"
                android:layout_width="20dp" android:layout_height="20dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/diagInfo_txtApple2"
                android:layout_marginTop="5dp"
                android:background="@drawable/wapple1" />
            <TextView android:id="@+id/diagInfo_txtApple3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/diagInfo_imgApple3"
                android:layout_alignTop="@id/diagInfo_imgApple3"
                android:layout_marginLeft="10dp"
                android:textSize="18dp"
                android:text="@string/infoAppleNote3" />   
             <View android:id="@+id/diagInfo_imgApple4"
                android:layout_width="20dp" android:layout_height="20dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/diagInfo_txtApple3"
                android:layout_marginTop="5dp"
                android:background="@drawable/sapple1" />
             <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/diagInfo_imgApple4"
                android:layout_alignTop="@id/diagInfo_imgApple4"
                android:layout_marginLeft="10dp"
                android:textSize="18dp"
                android:text="@string/infoAppleNote4" /> 
	    </RelativeLayout>
	    <TextView android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textSize="18dp"
	        android:text="@string/infoGameNote2" />
	</LinearLayout>
</ScrollView>